message ConnectionRequestMsg
{
  required uint32 protocolVersion = 1;
}

enum ConnectionResponseType
{
    Allowed = 1;
    WrongVersion = 2;
}

message ConnectionResponseMsg
{
  optional ConnectionResponseType result = 1 [default = Allowed];
  optional uint32 protocolVersion = 2 [default = 0];
}
